--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ click==6.7
 crypto==1.4.1
 cryptography==2.2.2
 django==2.0.2
-Flask==0.12.2
+Flask==1.0.2
 future==0.16.0
 gTTS==1.2.2
 gTTS-token==1.1.1
@@ -36,6 +36,7 @@ pywin32==223
 PyYAML==3.12
 requests==2.18.4
 requests-toolbelt==0.8.0
+requirements==0.1
 selenium==3.13.0
 shellescape==3.4.1
 six==1.11.0
